# WBLA

./: .env.example  .gitignore  AGENT_COMMUNICATION_ARCHITECTURE.md  AGENT_SCALABILITY_EXAMPLE.md  AUDIT.md  AUDIT_RESULTS.md  AUTONOMOUS_AGENTS_PLAN.md  AUTONOMOUS_AGENT_MIGRATION.md  BUG_REPORT_C1.md  BUG_REPORT_C2.md  BUG_REPORT_C2_EXTENDED.md  BUG_REPORT_POST_C2_ISSUES.md  CHANGELOG_v3.2_FIXED.md  COMPREHENSIVE_CODE_AUDIT.md  DEEP_AUDIT_REPORT.md  FIXES_C1_C2.md  FUTURE_IMPROVEMENTS_OPENWORK_INSPIRED.md  HOW_TO_TEST.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  MIGRATION_PLAN.md  MIGRATION_PLAN_ADK_DATA_SCIENCE.md  MODERN_AGENT_ARCHITECTURE.md  OUTPUT_EXAMPLE_ANALYSIS_AND_IMPROVEMENTS.md  PHASE2_MODERN_IMPLEMENTATION.md  PHASE_2_BUG_FIXES.md  PHASE_2_DEMO.md  PROGRESS.md  PR_DESCRIPTION.md  QUICK_FIX_GUIDE.md  RAG_AND_ASSESSMENT_FLEXIBILITY.md  README.md  REAL_CRITICAL_ISSUES_DETAILED.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  TESTING_GUIDE.md  TEST_CASES.md  TEST_RESULTS.md  UI_ARCHITECTURE.md  UI_COMPARISON_STREAMLIT_VS_ELECTRON.md  (+7 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
.streamlit/: config.toml
adk_web_project/: .env.example  README.md  output.txt  pyproject.toml
adk_web_project/adk_credit_pack/: __init__.py  agent.py  prompts.py  runner.py  tools.py
agents/: __init__.py  base.py  compliance_advisor.py  level3.py  orchestrator.py  process_analyst.py  writer.py
config/: __init__.py  settings.py
core/: __init__.py  _streaming_thinking.py  conversational_orchestrator.py  conversational_orchestrator_v2.py  export.py  governance_discovery.py  llm_client.py  orchestration.py  parsers.py  tracing.py
core/tracing/: __init__.py  trace_store.py  vertex_trace.py
credit-pack/: .env.example  README.md  pyproject.toml
credit-pack/credit_pack/: __init__.py  agent.py  analyst.py  compliance.py  config.py  export_docx.py  governance.py  llm.py  parsers.py  prompt.py  rag.py  runner.py  tools.py  writer.py
credit-pack/credit_pack/shared_libraries/: __init__.py
credit-pack/credit_pack/sub_agents/: __init__.py
credit-pack/credit_pack/sub_agents/compliance/: __init__.py  agent.py  prompt.py
credit-pack/credit_pack/sub_agents/process_analyst/: __init__.py  agent.py  prompt.py
credit-pack/credit_pack/sub_agents/writer/: __init__.py  agent.py  prompt.py
credit-pack/eval/: run_eval.py  test_cases.json
credit-pack/eval/results/: README.md  result_case_05_error_no_teaser.json  result_case_06_error_requirements_before_analysis.json  summary.txt
credit-pack/tests/: test_tools_eval.py
docs/: ADK_SAMPLES_FULL_MIGRATION_PLAN.md
models/: __init__.py  persistent_memory.py  process_steps.py  schemas.py  task_state.py
tests/: __init__.py
tests/integration/: test_chat_flow.py
tools/: __init__.py  change_tracker.py  document_loader.py  field_discovery.py  function_declarations.py  phase_manager.py  rag_search.py
ui/: CHAT_APP_README.md  app.py  chat_app.py
(+18 files in other folders)
